# ccd-logger

./: .gitignore  README.md  pyproject.toml
ccd_logger/: logger.py
ccd_logger.egg-info/: PKG-INFO  SOURCES.txt
ccd_logger/samples/: django_logger.py  generic_logger.py  lambda_logger.py
